--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
       
       <!-- Go to www.addthis.com/dashboard to customize your tools -->
       <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5ecfc5788257240a"></script>
-
+      <script>
+        WebView.getSettings().setMediaPlaybackRequiresUserGesture(false);
+      </script>
   </body>
 </html>
